# GammaSpec_GEANT

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CompareWithWithoutColl.m  G4Data2.heprep  G4Data3.heprep  G4Data4.heprep  G4Data5.heprep  G4Data6.heprep  G4Data7.heprep  G4History.macro  MakeElectronSpectrum.m  MakeInputDecks.m  MakeInputDecksBetatronNovis.m  MakeInputDecksGammaNovis.m  MakeInputDecks_backup.m  MakeInputDecks_profilethetaphi.m  MakeInputDecks_theta.m  MakeInputDecks_thetaphi.m  Makefile  PlotData.m  QED  QED.cc  README.md  buffer.txt  buffer_1.txt  buffer_thetaphi.txt  buffer_thetaphiprofile.txt  cmake_install.cmake  root2mat.py  root2mat_backup.py  runGamma.mac  runSim.mac
Meshes/: Chamber.3ds  Chamber_Decimated.stl  MagnetLarge.stl  MagnetLargeClean.stl  MagnetSmall.stl  MagnetSmallClean.stl  MagnetSpacer.stl  MagnetSpacerClean.stl  TestMesh.stl
Runs/DetTests_10mmSteel/: QED
Runs/DetTests_2mmSteel/: QED
Runs/DetTests_Insert_50mmSteel/: QED
Runs/DetTests_Magnet2T/: QED
Runs/DetTests_MagnetA/: QED
data/: 154855_03Jun2019.root  155209_03Jun2019.root  174904_03Jun2019.root  Gamma_010MeV.root
include/: B1ActionInitialization.hh  B1DetectorConstruction.hh  B1EventAction.hh  B1PrimaryGeneratorAction.hh  B1RunAction.hh  B1SteppingAction.hh  HistoManager.hh  HistoMessenger.hh  MagneticField.hh  UserVariables.hh  test.md
src/: B1ActionInitialization.cc  B1DetectorConstruction.cc  B1EventAction.cc  B1PrimaryGeneratorAction.cc  B1RunAction.cc  B1SteppingAction.cc  HistoManager.cc  HistoMessenger.cc  MagneticField.cc  test.md
(+18 files in other folders)
